--- a/ystr.plist
+++ b/ystr.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://download.010bjjl.com/static/download/ystr.ipa</string>
+                    <string>http://ystrshare.860y.com/static/download/ystr.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
